# C2S-Discord-Link

./: Cargo.toml  Dockerfile  README.md  config.ts  docker-compose.yml  ecosystem.config.ts  package-lock.json  package.json  server.ts  tsconfig.json  tslint.json
.github/workflows/: docker-build-and-push.yml  docker-build.yml
api/: index.ts
api/structs/: UserData.ts  roleHandling.ts
sql/: create_userdata.sql  update_userdata.sql  userdata.sql
src/: config.rs  constants.rs  db.rs  errors.rs  handlers.rs  headers.rs  main.rs  middleware.rs  models.rs  role_handling.rs  utilities.rs  webhook_logging.rs
src/structs/: controller.ts
