[package]
name = "discord-link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.10"
twilight-http = "0.10.1"
twilight-model = "0.10.1"
tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
rust-crypto = "0.2.36"
serde = "1"
derive_more = "0.99.17"
tokio-postgres = "0.7"
deadpool-postgres = "0.10.1"
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
async-trait = "0.1.52"
